add event listeners

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <h1>TIC TAC TOE</h1>
+    <h3 class="message"></h3>
     <main>
         <section class="game-board">
             <div class="square"></div>
@@ -21,6 +23,9 @@
             <div class="square"></div>
             <div class="square"></div>
         </section>
+        <div>
+        <button class="butt">RESET</button>
+        </div>
     </main>
 </body>
 </html>
