--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <h3 class="message"></h3>
     <main>
         <section class="game-board">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div data-square="0" class="square"></div>
+            <div data-square="1" class="square"></div>
+            <div data-square="2" class="square"></div>
+            <div data-square="3"class="square"></div>
+            <div data-square="4" class="square"></div>
+            <div data-square="5" class="square"></div>
+            <div data-square="6" class="square"></div>
+            <div data-square="7" class="square"></div>
+            <div data-square="8" class="square"></div>
         </section>
         <div>
         <button class="butt">RESET</button>
